# fast-dummy-test

./: Dockerfile  fast-dummy-test.yml  main.py  pyproject.toml
controller/: .__init__.py.swp  __init__.py  response_json.py  root.py
deploy/: deployment.yaml  service.yaml
static/json/: false-false.json  false-true-false-true.json  false-true-false.json  false-true.json
